force-app/main/default/objects/Office__c/fields/Accounting_ID__c.field-meta.xml
<CustomField>
    <fullName>Accounting_ID__c</fullName>
    <label>Accounting ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>