force-app/main/default/objects/Office__c/fields/Asbestos_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asbestos_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asbestos Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlDu</relationshipName>
    <type>Lookup</type>
</CustomField>