force-app/main/default/objects/Office__c/fields/Billing_Resource__c.field-meta.xml
<CustomField>
    <fullName>Billing_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Biller assigned to this office</inlineHelpText>
    <label>Billing Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Accounting</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Officesfj0m</relationshipName>
    <type>Lookup</type>
</CustomField>