force-app/main/default/objects/Office__c/fields/Biohazard_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Biohazard_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biohazard Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlHD</relationshipName>
    <type>Lookup</type>
</CustomField>