force-app/main/default/objects/Office__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Created by DemandBlue as part of Xact Integration</description>
    <label>Contractor/ Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>