force-app/main/default/objects/Office__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>General Branch Manager of office, if no divisions are applicable.</description>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices</relationshipName>
    <type>Lookup</type>
</CustomField>