force-app/main/default/objects/Office__c/fields/Branch_Manager_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager_Email_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional recipients for PM assignment email alert</description>
    <label>Branch Manager Email Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices9</relationshipName>
    <type>Lookup</type>
</CustomField>