force-app/main/default/objects/Office__c/fields/Business_Development_Director__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices5faV</relationshipName>
    <type>Lookup</type>
</CustomField>