force-app/main/default/objects/Office__c/fields/Catastrophes_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Catastrophes_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catastrophes Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlHh</relationshipName>
    <type>Lookup</type>
</CustomField>