force-app/main/default/objects/Office__c/fields/Consulting_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlHw</relationshipName>
    <type>Lookup</type>
</CustomField>