force-app/main/default/objects/Office__c/fields/Contents_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contents_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operations Manager of Contents Division</description>
    <label>Contents Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices6</relationshipName>
    <type>Lookup</type>
</CustomField>