force-app/main/default/objects/Office__c/fields/Customer_Account_Representative__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer Account Rep assigned to this office</inlineHelpText>
    <label>Customer Account Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>Customer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Officesfj0c</relationshipName>
    <type>Lookup</type>
</CustomField>