force-app/main/default/objects/Office__c/fields/Demolition_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Demolition_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demolition Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlEd</relationshipName>
    <type>Lookup</type>
</CustomField>