force-app/main/default/objects/Office__c/fields/Emergency_Services_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Services_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operations Manager of Emergency Services Division</description>
    <label>Emergency Services Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices7</relationshipName>
    <type>Lookup</type>
</CustomField>