force-app/main/default/objects/Office__c/fields/Environmental_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch Manager of the Environmental Division, if applicable to that office.</description>
    <label>Environmental Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices3</relationshipName>
    <type>Lookup</type>
</CustomField>