force-app/main/default/objects/Office__c/fields/Environmental_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operations Manager for the Environmental division</description>
    <label>Environmental Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices4</relationshipName>
    <type>Lookup</type>
</CustomField>