force-app/main/default/objects/Office__c/fields/ES_and_Contents_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>ES_and_Contents_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operational Manager of Emergency Services and Contents divisions</description>
    <label>ES and Contents Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices5</relationshipName>
    <type>Lookup</type>
</CustomField>