force-app/main/default/objects/Office__c/fields/EVP_1__c.field-meta.xml
<CustomField>
    <fullName>EVP_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EVP 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlCc</relationshipName>
    <type>Lookup</type>
</CustomField>