force-app/main/default/objects/Office__c/fields/EVP_2__c.field-meta.xml
<CustomField>
    <fullName>EVP_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EVP 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlD6</relationshipName>
    <type>Lookup</type>
</CustomField>