force-app/main/default/objects/Office__c/fields/GP_Asbestos_Lead_Bio__c.field-meta.xml
<CustomField>
    <fullName>GP_Asbestos_Lead_Bio__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>GP: Asbestos, Lead, Bio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>