force-app/main/default/objects/Office__c/fields/GP_Emergency_Services__c.field-meta.xml
<CustomField>
    <fullName>GP_Emergency_Services__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>GP: Emergency Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>