force-app/main/default/objects/Office__c/fields/Health_Science_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Health_Science_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operations Manager of Health Science Division</description>
    <label>Health Science Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices8</relationshipName>
    <type>Lookup</type>
</CustomField>