force-app/main/default/objects/Office__c/fields/Lead_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlE9</relationshipName>
    <type>Lookup</type>
</CustomField>