force-app/main/default/objects/Office__c/fields/License_No__c.field-meta.xml
<CustomField>
    <fullName>License_No__c</fullName>
    <label>License No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>