force-app/main/default/objects/Office__c/fields/Marketing_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlIV</relationshipName>
    <type>Lookup</type>
</CustomField>