force-app/main/default/objects/Office__c/fields/Microbial_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Microbial_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Microbial Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlGj</relationshipName>
    <type>Lookup</type>
</CustomField>