force-app/main/default/objects/Office__c/fields/Office_Facebook_link__c.field-meta.xml
<CustomField>
    <fullName>Office_Facebook_link__c</fullName>
    <label>Office Facebook link</label>
    <type>Url</type>
</CustomField>