force-app/main/default/objects/Office__c/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlDf</relationshipName>
    <type>Lookup</type>
</CustomField>