force-app/main/default/objects/Office__c/fields/Office_Yelp_link__c.field-meta.xml
<CustomField>
    <fullName>Office_Yelp_link__c</fullName>
    <description>Office Yep Link</description>
    <label>Office Yelp link</label>
    <type>Url</type>
</CustomField>