force-app/main/default/objects/Office__c/fields/Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>General Operations Manager of an office, if divisions are not applicable</description>
    <label>Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices1</relationshipName>
    <type>Lookup</type>
</CustomField>