force-app/main/default/objects/Office__c/fields/PM_Assignment_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Assignment_Office_Email__c</fullName>
    <label>PM Assignment Office Email</label>
    <type>Email</type>
</CustomField>