force-app/main/default/objects/Office__c/fields/Project_Admin_two__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin_two__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Admin 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesE1CT</relationshipName>
    <type>Lookup</type>
</CustomField>