force-app/main/default/objects/Office__c/fields/Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices80Iv</relationshipName>
    <type>Lookup</type>
</CustomField>