force-app/main/default/objects/Office__c/fields/Project_Note_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Note_Office_Email__c</fullName>
    <label>Project Note Office Email</label>
    <type>Email</type>
</CustomField>