force-app/main/default/objects/Office__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NorCal-Washington</fullName>
            </value>
            <value>
                <fullName>SoCal-Nevada</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>