force-app/main/default/objects/Office__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager (DEL)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlDL</relationshipName>
    <type>Lookup</type>
</CustomField>