force-app/main/default/objects/Office__c/fields/SFMapsLatitude__c.field-meta.xml
<CustomField>
    <fullName>SFMapsLatitude__c</fullName>
    <label>SFMapsLatitude</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>