force-app/main/default/objects/Office__c/fields/SFMapsLongitude__c.field-meta.xml
<CustomField>
    <fullName>SFMapsLongitude__c</fullName>
    <label>SFMapsLongitude</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>