force-app/main/default/objects/Office__c/fields/Structure_Contents_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Structure_Contents_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch Manager of Structure and Contents divisions</description>
    <label>Structure/Contents Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Offices2</relationshipName>
    <type>Lookup</type>
</CustomField>