force-app/main/default/objects/Office__c/fields/Technical_Services_Operations_Manager__c.field-meta.xml
<CustomField>
    <fullName>Technical_Services_Operations_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Services Operations Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficesdlIG</relationshipName>
    <type>Lookup</type>
</CustomField>