force-app/main/default/objects/Office__c/fields/Work_Order_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficeshXcG</relationshipName>
    <type>Lookup</type>
</CustomField>