force-app/main/default/objects/Office__c/fields/Work_order_Approver__c.field-meta.xml
<CustomField>
    <fullName>Work_order_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work order Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OfficeshXc6</relationshipName>
    <type>Lookup</type>
</CustomField>