force-app/main/default/objects/Office__c/fields/Xactnet_address__c.field-meta.xml
<CustomField>
    <fullName>Xactnet_address__c</fullName>
    <label>Xactnet address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>